syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "api/grpc/v1/comment;comment_grpc_service";

message UpsertCommentGrpcRequest {
  string id = 1;
  string tenant = 2;
  string userId = 3;
  string content = 4;
  string contentType = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  optional string authorUserId = 8;
  optional string commentedIssueId = 9;
  SourceFields sourceFields = 10;
  ExternalSystemFields externalSystemFields = 11;
}

message CommentIdGrpcResponse {
  string id = 1;
}

service commentGrpcService {
  rpc UpsertComment(UpsertCommentGrpcRequest) returns (CommentIdGrpcResponse);
}
